# natimai-tiai

./: .gitattributes  .gitignore  LICENSE  README.md  plan-projet-tiai.md
.github/workflows/: ci.yml
agent/: README.md  go.mod  go.sum  main.go
agent/internal/agent/: agent.go  agent_test.go
agent/internal/api/: client.go
agent/internal/collector/: defender.go  defender_other.go  defender_test.go  defender_windows.go
agent/internal/config/: config.go  config_test.go  registry_other.go  registry_windows.go
agent/internal/dpapi/: dpapi_other.go  dpapi_windows.go
agent/internal/identity/: identity.go  reads_other.go  reads_windows.go
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  0002_users.py  0003_fingerprint.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: agent.py  auth.py  commands.py  health.py  machines.py  stats.py  threats.py
backend/app/core/: arq_pool.py  arq_worker.py  config.py  db.py  errors.py  security.py
backend/app/features/: base.py  models.py
backend/app/features/command/: crud.py  models.py
backend/app/features/machine/: crud.py  fingerprint.py  models.py  status.py
backend/app/features/notification/: mailgun.py
backend/app/features/threat/: crud.py  models.py  schemas.py
backend/app/features/user/: crud.py  models.py  permissions.py
backend/app/scripts/: entrypoint.sh  seed_admin.py
backend/tests/: conftest.py  test_api_agent.py  test_api_console.py  test_config.py  test_error_contract.py  test_errors_unit.py  test_fingerprint.py  test_freshness.py  test_notifications.py  test_permissions.py  test_security.py  test_worker.py
deploy/: .env.example  Caddyfile  Caddyfile.dev  docker-compose.dev.yml  docker-compose.yml
frontend/: .dockerignore  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  quasar.config.ts  vitest.config.ts
frontend/src/: App.vue
(+34 files in other folders)
