[project]
name = "tiai-backend"
version = "0.1.0"
description = "Tiai — backend API + ARQ worker"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.114,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlmodel>=0.0.21,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "arq>=0.26,<1.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    # Pinned: passlib 1.7.x breaks with bcrypt >= 4.1 (missing __about__).
    "bcrypt==4.0.1",
    "pyjwt>=2.8,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "types-passlib>=1.7,<2.0",
]

[tool.uv]
# Application, not a distributable package: uv manages the env, no build step.
package = false

[tool.ruff]
target-version = "py312"
exclude = ["app/alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line length
    "B008",  # function calls in argument defaults (FastAPI Depends/Query)
]

[tool.mypy]
strict = true
exclude = ["app/alembic"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    # SQLModel nudges toward session.exec(); kept execute() is intentional for
    # text()/INSERT/UPDATE statements where exec() does not apply.
    'ignore:(?s).*session\.exec\(\):DeprecationWarning',
]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*", "app/scripts/*"]
# SQLAlchemy's async layer runs handler code across greenlet switches; without
# this, coverage loses track of lines after each await and under-reports.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
# CI fails below this line. Currently ~71%; raise as the suite grows.
fail_under = 65
